refactor: enhance anchor re-selection logic for bbox and improve shape-type compatibility checks; update contamination scoring for achromatic references